@@ -3,6 +3,7 @@
 	* examples/models_mesh_picking.rb: Added
 	* examples/text_font_filters.rb: Added
 	* examples/utf8_font.rb: Modified to use texture filter
+	* examples/textures_mouse_painting.rb: Added
 
 2021-12-18  vaiorabbit  <http://twitter.com/vaiorabbit>
 
